[gd_scene load_steps=9 format=2]

[ext_resource path="res://enemies/BaseEnemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/trigun/sprites/trigun_light.png" type="Texture" id=2]
[ext_resource path="res://enemies/trigun/TrigunEnemyLight.gd" type="Script" id=3]
[ext_resource path="res://enemies/trigun/beams/EnemyTrigunLightBeam.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 26.75 )

[node name="TrigunEnemyLight" instance=ExtResource( 1 )]
rotate = true
script = ExtResource( 3 )
health_points = 130
movement_speed = 50.0
beam_scene = ExtResource( 4 )

[node name="AnimatedSprite" parent="." index="0"]
position = Vector2( 0, 2 )
rotation = -1.5708
scale = Vector2( 2.8, 2.8 )
frames = SubResource( 3 )
frame = 1
playing = true
offset = Vector2( 0, -5.71429 )

[node name="Area2D" parent="." index="2"]
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2( 0, 3 )
shape = SubResource( 4 )

[node name="TimeToShoot" parent="." index="3"]
wait_time = 0.238

[node name="TimeToStopShooting" type="Timer" parent="." index="4"]
wait_time = 1.3
one_shot = true

[connection signal="timeout" from="TimeToShoot" to="." method="_on_TimeToShoot_timeout"]
[connection signal="timeout" from="TimeToStopShooting" to="." method="_on_TimeToStopShooting_timeout"]
